[package]
name = "qb"
version = "0.1.0"
authors = ["Per Odlund <per.odlund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies.confy]
features = ["yaml_conf"]
default-features = false

[dependencies]
rusqlite = "*"
tui = "0.15"
termion = "1.5"
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
