[package]
name = "qb"
version = "0.1.0"
authors = ["Per Odlund <per.odlund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies.confy]
features = ["ron_conf"]
default-features = false

[dependencies]
rusqlite = "*"
ratatui = { version = "0.23.0", features = ["all-widgets"]}
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
anyhow = "1.0.75"
crossterm = { version = "0.27.0", features = ["serde"] }
tui-input = { version = "*", features = ["serde"] }
thiserror = "1.0.48"
